--- a/package.yml
+++ b/package.yml
@@ -101,5 +101,5 @@ matches:
   - trigger: "(()) "
     replace: "\\left( $|$ \\right)"
 
-  - trigger: "Pan "
-    replace: "Panos"
+  - trigger: "\\t "
+    replace: "\\text{$I$}"
