--- a/package.yml
+++ b/package.yml
@@ -70,6 +70,9 @@ matches:
   - trigger: "\\mc "
     replace: "\\mathcal{$|$}"
 
+  - trigger: "\\mf "
+    replace: "\\matfrac{$|$}"
+
   - trigger: "\\inv "
     replace: "^{-1}"
 
