--- a/_manifest.yml
+++ b/_manifest.yml
@@ -1,6 +1,6 @@
 name: "latex"
 title: "Latex"
 description: Some common latex snippets for breezing through any latex journey
-version: 0.1.8
+ersion: 0.1.9
 author: Panos Oikonomou
 tags: ["latex", "math", "equations"]
