--- a/package.yml
+++ b/package.yml
@@ -117,9 +117,9 @@ matches:
     replace: "\\text{$|$\\,}"
 
   - triggers: 
-    - "\fr12 "
-    - "\f12 "
-    - "\frac12 "
+    - "\\fr12 "
+    - "\\f12 "
+    - "\\frac12 "
     replace: "\\frac{1}{2}"
 
   - trigger: "^^ "
