--- a/package.yml
+++ b/package.yml
@@ -154,10 +154,10 @@ matches:
   - trigger: "\\t, "
     replace: "\\text{$|$\\,}"
 
-  - regex: "\\\\T(?P<input1>.*) "
+  - regex: "\\\\tt(?P<input1>.*) "
     replace: "\\text{{{input1}}}" 
   
-  - regex: "\\\\L(?P<input1>.*) "
+  - regex: "\\\\tt,(?P<input1>.*) "
     replace: "\\text{{{input1}}\\,}" 
 
 
