fixed a bit of a noneficiency

--- a/package.yml
+++ b/package.yml
@@ -157,7 +157,7 @@ matches:
   - regex: "\\\\tt(?P<input1>.*) "
     replace: "\\text{{{input1}}}" 
   
-  - regex: "\\\\tt,(?P<input1>.*) "
+  - regex: "\\\\ll(?P<input1>.*) "
     replace: "\\text{{{input1}}\\,}" 
 
 
